added README and INSTALL
git-svn-id: https://javamop.googlecode.com/svn/trunk@8 3664526f-1af9-0fc8-7c89-f5c43c22a1f7

--- a/README-JavaMOP-src.html
+++ b/README-JavaMOP-src.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <head>
-<title>JavaMOP 2.2.0 Source<title>
+<title>JavaMOP 2.2.0 Source</title>
 <style type="text/css">
 <!--
   P   { margin-left:  20px; }
